tests/cases/parser/misc/double_hash.hash
// run=fail, stage=parse

k := ##naughty_intrinsic();
